Fix/53 logout
